# fastenano

./: .gitignore  README.md  WORKSPACE
docs/: software-architecture.md
src/main/fastenano/frontend/: Application.kt  BUILD.bazel  EchoApp.kt
src/main/fastenano/frontend/api/: Application.kt  BUILD.bazel  EchoApp.kt
src/main/fastenano/frontend/request/: BUILD.bazel  IpcRequest.kt
src/main/fastenano/frontend/resources/: BUILD.bazel  application.conf
src/main/fastenano/proto/: BUILD.bazel  README.md  nano.fbs
src/main/hello/: BUILD.bazel  Hello.kt
src/main/resources/: BUILD.bazel  application.conf
