# Copyright 2021 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

#load("@flatbuffers//:build_defs.bzl", "flatbuffer_library_public")
load("//third_party/flatbuffers:build_defs.bzl", "flatbuffer_library_public")

flatbuffer_library_public(
    name = "nano_fbs",
    srcs = ["nano.fbs"],
    outs = ["fastenano/proto/Encoding.java"],
    language_flag = "-j",
)

java_library(
    name = "nano_java_fbs",
    srcs = [":nano_fbs"],
    visibility = ["//src/main/fastenano:__subpackages__"],
    deps = [],
)
